--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -12,3 +12,15 @@
 .item a.activeLink {
     color: gold;
 }
+
+.friends {
+    display: flex;
+    height: 50px;
+    justify-content: space-around;
+    text-align: center;
+}
+
+.friends img {
+    width: 50px;
+    border-radius: 50%;
+}
