--- a/src/components/Users/Users.module.css
+++ b/src/components/Users/Users.module.css
@@ -1,6 +1,12 @@
-.userPhoto {
+.userPhoto1 {
     /* display: block; */
-    max-width: 10%;
+    max-width: 200px;
+    max-height: 190px;
+    border: none;
     margin: 0 auto;
     border-radius: 50%;
+}
+
+.selectedPage {
+    font-weight: bold;
 }
