--- a/src/App.css
+++ b/src/App.css
@@ -11,8 +11,9 @@
 .app-wrapper-content {
     grid-area: c;
     background-color: cornflowerblue;
+    max-width: 1000px;
 }
 
 .app-wrapper-content img {
-    width: 800px;
+    max-width: 800px;
 }
